Workaround smoke test with Android manifest task to work with JDK16